--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -39,9 +39,32 @@
                     app:layout_anchorGravity="bottom|end"
                     app:srcCompat="@drawable/ic_star_border_white" />
 
+                <TextView
+                    android:id="@+id/textview_byline"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:background="#88000000"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    app:layout_anchor="@id/image_view"
+                    app:layout_anchorGravity="bottom"
+                    tools:text="Byline" />
+
             </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-
+            <TextView
+                android:id="@+id/text_view_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:textSize="16sp"
+                android:textStyle="bold|italic"
+                android:maxLines="3"
+                android:ellipsize="end"
+                tools:text="Title"
+                tools:visibility="visible" />
             <TextView
                 android:id="@+id/text_view_description"
                 android:layout_width="wrap_content"
@@ -52,16 +75,55 @@
                 tools:text="This is the description"
                 tools:visibility="visible" />
 
-            <TextView
-                android:id="@+id/text_view_creator"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                android:textColor="@android:color/holo_blue_dark"
-                android:visibility="gone"
-                tools:text="Photo by XYZ on Unsplash"
-                tools:visibility="visible" />
+                android:layout_marginLeft="8dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/source"
+                    android:layout_weight="0"/>
+
+                <TextView
+                    android:id="@+id/textview_source"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    tools:text="source"
+                    tools:visibility="visible" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/website"
+                    android:layout_weight="0"/>
+
+                <TextView
+                    android:id="@+id/text_view_creator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:lines="2"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:textColor="@android:color/holo_blue_dark"
+                    tools:text="website"
+                    tools:visibility="visible" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
