--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,7 +34,7 @@
         android:id="@+id/rv_news"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:paddingVertical="12dp"
+        android:paddingTop="12dp"
         android:scrollbars="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
