--- a/app/src/main/res/layout/repo_view_item.xml
+++ b/app/src/main/res/layout/repo_view_item.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="2dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
@@ -19,7 +20,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="15sp"
+        android:textSize="16sp"
+        android:ellipsize="end"
+        android:lines="1"
         android:layout_marginTop="5dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -28,11 +31,24 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
-        android:id="@+id/date"
+        android:id="@+id/textview_snippet"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:lines="2"
+        android:ellipsize="end"
+        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@id/title"
         app:layout_constraintTop_toBottomOf="@id/title"
         app:layout_constraintEnd_toEndOf="@id/title" />
+
+    <TextView
+        android:id="@+id/textview_date"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="@id/textview_snippet"
+        app:layout_constraintTop_toBottomOf="@id/textview_snippet"
+        app:layout_constraintEnd_toEndOf="@id/textview_snippet"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
